test/part2/success/typage_pointer1-4.c
int main(){
	
	int *i;
	char *c;	
	int e;	
	
	*i = *i + *c + e;

	i = &e;

}
