test/part2/fail/wrong_op_++.c


struct b {
	int h;
};


int main () {

	int i;

	h++;

}
  



